# python-relational-stream-analysis

./: .gitignore  README.md  pyproject.toml
.github/workflows/: docs.yml
docs/: api_reference.rst  conf.py  index.rst
relational_stream/: __init__.py  __init__.pyi  flow.py  flow.pyi  stream.py  stream.pyi
tests/: test_relational_stream.py
