[tool.isort]
line_length = 100
multi_line_output = 3
profile = "black"

[tool.black]
line-length = 100

[tool.mypy]
show_column_numbers = true

[tool.poetry]
authors = ["Stephan Lensky <public@slensky.com>"]
description = "A Python library for relational stream analysis."
homepage = "https://github.com/stephanlensky/python-relational-stream-analysis"
include = ["LICENSE"]
license = "GPL-3.0-only"
name = "relational-stream"
readme = "README.md"
repository = "https://github.com/stephanlensky/python-relational-stream-analysis"
version = "0.6.0"

[tool.poetry.dependencies]
pytest = "^6.2.5"
python = "^3.9"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.0"
ruff = "^0.1.5"
sphinx = "^7.2.6"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
